force-app/main/default/objects/OrgSetting__mdt/OrgSetting__mdt.object-meta.xml
<CustomObject>
    <label>OrgSetting</label>
    <pluralLabel>OrgSettings</pluralLabel>
</CustomObject>