force-app/main/default/objects/OrgSetting__mdt/fields/TestPassword__c.field-meta.xml
<CustomField>
    <fullName>TestPassword__c</fullName>
    <inlineHelpText>Crypted value</inlineHelpText>
    <label>Test Password</label>
    <length>60</length>
    <type>Text</type>
</CustomField>