force-app/main/default/objects/OrgSetting__mdt/fields/TestUrl__c.field-meta.xml
<CustomField>
    <fullName>TestUrl__c</fullName>
    <label>Test URL</label>
    <type>Url</type>
</CustomField>